<resources>
    <string name="app_name">Gurme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="Welcome_Back">Welcome Back</string>
    <string name="choose_ingredients_to_remove">Choose ingredients to remove</string>
    <string name="add_note">Add note</string>
</resources>